# llm-tdd-testtypekit

./: .gitignore  .gitmodules  Dockerfile  IMPLEMENTATION_SUMMARY.md  MBPP_ITERATIVE_EXPERIMENT_README.md  README.md  analyze_consistency.py  analyze_detailed_errors.py  analyze_failures.py  analyze_functional_errors.py  analyze_humaneval_results.py  analyze_logic_errors.py  analyze_logic_failures.py  analyze_mbpp_results.py  analyze_mbpp_results_fixed.py  analyze_syntax_failures.py  analyze_tdd_comprehensive.py  analyze_tdd_test_quality.py  analyze_unknown_errors.py  docker-compose.yml  env.example  fix_common_syntax.py  generate_experiment_report.py  langchain_batch_164_tasks_gpt_4o_mini_20250717_190540.jsonl_results.jsonl  pyproject.toml  requirements.txt  run_mbpp_iterative_experiment.py  run_mbpp_parameter_experiment.py  run_mbpp_quick_test.py  setup_env.py  test_contract_validator.py  test_else_fix.py  test_enhanced_prompt.py  test_gpt_generator.py  test_heuristic_checker.py  test_humaneval_tdd_pipeline.py  test_improved_settings.py  test_mbpp_evaluation.py  test_new_pipelines.py  test_tdd_pipeline.py  (+2 more)
mbpp_iterative_repair_100tasks_2rounds_T0.1_20250903_151408/: initial_tests.jsonl  mbpp_eval_final.jsonl  round_1_code.jsonl  round_1_results.jsonl  round_2_code.jsonl  round_2_results.jsonl  round_3_code.jsonl  round_3_results.jsonl  task_100_final_status.json  task_10_final_status.json  task_11_final_status.json  task_12_final_status.json  task_13_final_status.json  task_14_final_status.json  task_15_final_status.json  task_16_final_status.json  (+92 more)
pipelines/: README.md  (+19 more)
(+728 files in other folders)
